<resources>
    <string name="app_name">Alura Travels</string>
    <string name="specials">Specials</string>
    <string name="brazil">Brazil</string>
    <string name="activity_packages_list_image_view_content_description">Color purple banner.</string>
    <string name="item_package_city_name">São Paulo</string>
    <string name="item_menu_travel_days">2 dias</string>
    <string name="item_menu_image_content_description">Image of travel destination.</string>
    <string name="item_menu_price">R$ 300,00</string>
    <string name="days">%1$d day(s)</string>
    <string name="packages_list_activity_title">Packages</string>
    <string name="activity_package_overview_total_price">Total:</string>
    <string name="activity_package_overview_button">Pay</string>
    <string name="activity_package_overview_title">Package Overview</string>
    <string name="activity_package_overview_travel_time">%1$s - %2$s de %3$d</string>
    <string name="activity_payment_text_view_title">Enter the credit card information you wish to use for payment.</string>
    <string name="activity_payment_price_title">Total price:</string>
    <string name="activity_payment_card_number_placeholder">Card number</string>
    <string name="activity_payment_card_number_icon_description">A credit card image</string>
    <string name="activity_payment_card_validity_month_hint">MM</string>
    <string name="activity_payment_card_validity_year_hint">YY</string>
    <string name="activity_payment_card_validity_cvc_hint">CVC</string>
    <string name="activity_payment_card_name_hint">Name on card</string>
    <string name="activity_payment_button_finish">Finish</string>
    <string name="activity_payment_title">Payment</string>
    <string name="activity_payment_mask_card_number">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZáéíóúâêôãõàçÁÉÓÚÂÊÔÃÕÀÇ\u0020</string>
    <string name="activity_payment_overview_title">Payment Overview</string>
    <string name="activity_payment_overview_textview_title">Congrats!</string>
    <string name="activity_payment_overview_textview_subtitle">Package buy with success! 🎊</string>
    <string name="activity_payment_imageview_banner_content_description">Banner with orange color</string>
    <string name="activity_payment_overview_textview_overview_text">Take a look of the buy:</string>
</resources>