<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_package_image"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/item_menu_image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/salvador_ba"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/item_menu_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:padding="8dp"
        android:text="@string/item_package_city_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/item_package_image"
        app:layout_constraintEnd_toEndOf="@id/item_package_image"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/item_package_image"
        app:layout_constraintTop_toTopOf="@id/item_package_image"
        app:layout_constraintVertical_bias="1" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/item_menu_divider"
        android:layout_width="0dp"
        android:layout_height="3dp"
        app:dividerColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_package_image" />

    <TextView
        android:id="@+id/item_menu_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/item_menu_travel_days"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_menu_divider" />

    <TextView
        android:id="@+id/item_menu_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_menu_price"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/item_menu_days"
        app:layout_constraintTop_toBottomOf="@id/item_menu_days" />
</androidx.constraintlayout.widget.ConstraintLayout>