<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/package_overview_imageview"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/item_menu_image_content_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/packages.json/packages/image" />

    <TextView
        android:id="@+id/package_overview_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/package_overview_imageview"
        app:layout_constraintTop_toBottomOf="@id/package_overview_imageview"
        tools:text="@sample/packages.json/packages/location" />

    <TextView
        android:id="@+id/package_overview_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/package_overview_location"
        app:layout_constraintTop_toBottomOf="@id/package_overview_location"
        tools:text="@sample/packages.json/packages/days" />

    <TextView
        android:id="@+id/package_overview_time"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/package_overview_price"
        app:layout_constraintStart_toStartOf="@id/package_overview_days"
        app:layout_constraintTop_toBottomOf="@id/package_overview_days"
        tools:text="@sample/packages.json/packages/time" />

    <TextView
        android:id="@+id/package_overview_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_package_overview_total_price"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/package_overview_price"
        app:layout_constraintEnd_toEndOf="@id/package_overview_price" />

    <TextView
        android:id="@+id/package_overview_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/package_overview_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/package_overview_time"
        tools:text="@sample/packages.json/packages/price" />

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_orange_button"
        android:text="@string/activity_package_overview_button"
        android:textColor="@android:color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>